--- a/p8105_hw6_ys3766.md
+++ b/p8105_hw6_ys3766.md
@@ -65,9 +65,10 @@ bootstrap_analysis %>%
 <img src="p8105_hw6_ys3766_files/figure-gfm/unnamed-chunk-5-1.png" width="90%" />
 
 The upper plot of log(beta0 x beta1) is symmetrically distributed,
-centered around 2.00, with values ranging from 1.95 to 2.05. This shows
-moderate variability in the regression coefficients across samples, but
-supports the stability of the model parameters and a good over all fit.
+centered slightly above 2.00, with values ranging from 1.95 to 2.05.
+This shows moderate variability in the regression coefficients across
+samples, but supports the stability of the model parameters and a good
+over all fit.
 
 The lower plot of R^2 shows a symmetric distribution concentrating
 between 0.88 and 0.93, with a peak at around 0.91. This indicates a
@@ -90,3 +91,159 @@ bootstrap_analysis %>%
 | r_squared_lower | r_squared_upper | log_coefficients_product_lower | log_coefficients_product_upper |
 |----------------:|----------------:|-------------------------------:|-------------------------------:|
 |           0.895 |           0.927 |                          1.964 |                          2.058 |
+
+# Question 2
+
+import data, clean and prepare for analysi
+
+``` r
+homicide_df <- read_csv(file = "data/homicide-data.csv", na = c("Unknown", "NA", "")) %>%
+  mutate(
+    city_state = str_c(city, state, sep = ", "),
+    solved = if_else(disposition == "Closed by arrest", 1, 0),
+    victim_age = as.numeric(victim_age),
+    reported_date = as.Date(as.character(reported_date), format = "%Y%m%d"),
+  ) %>%
+  filter(
+    !city_state %in% c("Dallas, TX", "Phoenix, AZ", "Kansas City, MO", "Tulsa, AL"),
+    victim_race %in% c("White", "Black")
+  )
+```
+
+    ## Rows: 52179 Columns: 12
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr (8): uid, victim_last, victim_first, victim_race, victim_sex, city, stat...
+    ## dbl (4): reported_date, victim_age, lat, lon
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+Logistic Regression for Baltimore, MD
+
+``` r
+baltimore_results <- homicide_df %>%
+  filter(city_state == "Baltimore, MD") %>%
+  glm(solved ~ victim_age + victim_sex + victim_race, family = binomial(), data = .) %>%
+  broom::tidy(conf.int = TRUE) %>%
+  filter(term == "victim_sexMale") %>%
+  mutate(
+    OR = exp(estimate),       
+    CI_lower = exp(conf.low),   
+    CI_upper = exp(conf.high)  
+  ) %>%
+  select(OR, CI_lower, CI_upper)
+
+knitr::kable(baltimore_results, digits = 3, caption = "Adjusted OR for Male vs Female Victims in Baltimore, MD")
+```
+
+|    OR | CI_lower | CI_upper |
+|------:|---------:|---------:|
+| 0.426 |    0.324 |    0.558 |
+
+Adjusted OR for Male vs Female Victims in Baltimore, MD
+
+Logistic Regression for Each City
+
+``` r
+city_results <- homicide_df %>%
+  group_by(city_state) %>%
+  nest() %>%
+  mutate(
+    model = map(data, ~ glm(solved ~ victim_age + victim_sex + victim_race, family = binomial(), data = .x)),
+    results = map(model, ~ broom::tidy(.x, conf.int = TRUE) %>%
+                    filter(term == "victim_sexMale") %>%
+                    mutate(
+                      OR = exp(estimate),
+                      ci_lower = exp(conf.low),
+                      ci_upper = exp(conf.high)
+                    ) %>%
+                    select(OR, ci_lower, ci_upper))
+  ) %>%
+  unnest(results) %>%
+  select(city_state, OR, ci_lower, ci_upper)
+
+knitr::kable(city_results, digits = 3, caption = "Adjusted ORs for Male vs Female Victims Across Cities")
+```
+
+| city_state         |    OR | ci_lower | ci_upper |
+|:-------------------|------:|---------:|---------:|
+| Albuquerque, NM    | 1.767 |    0.825 |    3.762 |
+| Atlanta, GA        | 1.000 |    0.680 |    1.458 |
+| Baltimore, MD      | 0.426 |    0.324 |    0.558 |
+| Baton Rouge, LA    | 0.381 |    0.204 |    0.684 |
+| Birmingham, AL     | 0.870 |    0.571 |    1.314 |
+| Boston, MA         | 0.667 |    0.351 |    1.260 |
+| Buffalo, NY        | 0.521 |    0.288 |    0.936 |
+| Charlotte, NC      | 0.884 |    0.551 |    1.391 |
+| Chicago, IL        | 0.410 |    0.336 |    0.501 |
+| Cincinnati, OH     | 0.400 |    0.231 |    0.667 |
+| Columbus, OH       | 0.532 |    0.377 |    0.748 |
+| Denver, CO         | 0.479 |    0.233 |    0.962 |
+| Detroit, MI        | 0.582 |    0.462 |    0.734 |
+| Durham, NC         | 0.812 |    0.382 |    1.658 |
+| Fort Worth, TX     | 0.669 |    0.394 |    1.121 |
+| Fresno, CA         | 1.335 |    0.567 |    3.048 |
+| Houston, TX        | 0.711 |    0.557 |    0.906 |
+| Indianapolis, IN   | 0.919 |    0.678 |    1.241 |
+| Jacksonville, FL   | 0.720 |    0.536 |    0.965 |
+| Las Vegas, NV      | 0.837 |    0.606 |    1.151 |
+| Long Beach, CA     | 0.410 |    0.143 |    1.024 |
+| Los Angeles, CA    | 0.662 |    0.457 |    0.954 |
+| Louisville, KY     | 0.491 |    0.301 |    0.784 |
+| Memphis, TN        | 0.723 |    0.526 |    0.984 |
+| Miami, FL          | 0.515 |    0.304 |    0.873 |
+| Milwaukee, wI      | 0.727 |    0.495 |    1.054 |
+| Minneapolis, MN    | 0.947 |    0.476 |    1.881 |
+| Nashville, TN      | 1.034 |    0.681 |    1.556 |
+| New Orleans, LA    | 0.585 |    0.422 |    0.812 |
+| New York, NY       | 0.262 |    0.133 |    0.485 |
+| Oakland, CA        | 0.563 |    0.364 |    0.867 |
+| Oklahoma City, OK  | 0.974 |    0.623 |    1.520 |
+| Omaha, NE          | 0.382 |    0.199 |    0.711 |
+| Philadelphia, PA   | 0.496 |    0.376 |    0.650 |
+| Pittsburgh, PA     | 0.431 |    0.263 |    0.696 |
+| Richmond, VA       | 1.006 |    0.483 |    1.994 |
+| San Antonio, TX    | 0.705 |    0.393 |    1.238 |
+| Sacramento, CA     | 0.669 |    0.326 |    1.314 |
+| Savannah, GA       | 0.867 |    0.419 |    1.780 |
+| San Bernardino, CA | 0.500 |    0.166 |    1.462 |
+| San Diego, CA      | 0.413 |    0.191 |    0.830 |
+| San Francisco, CA  | 0.608 |    0.312 |    1.155 |
+| St. Louis, MO      | 0.703 |    0.530 |    0.932 |
+| Stockton, CA       | 1.352 |    0.626 |    2.994 |
+| Tampa, FL          | 0.808 |    0.340 |    1.860 |
+| Tulsa, OK          | 0.976 |    0.609 |    1.544 |
+| Washington, DC     | 0.691 |    0.466 |    1.014 |
+
+Adjusted ORs for Male vs Female Victims Across Cities
+
+Plot Adjusted Odds Ratios and Confidence Intervals
+
+``` r
+city_results %>%
+  ggplot(aes(x = reorder(city_state, OR), y = OR)) +
+  geom_point() +
+  geom_errorbar(aes(ymin = ci_lower, ymax = ci_upper), width = 0.2) +
+  coord_flip() +
+  labs(
+    title = "Estimated ORs for Male vs Female Victims Across Cities",
+    x = "City, State",
+    y = "Odds Ratio (Male vs Female Victims)"
+  )
+```
+
+<img src="p8105_hw6_ys3766_files/figure-gfm/unnamed-chunk-10-1.png" width="90%" />
+
+The plot shows adjusted odds ratios (ORs) for solving homicides
+involving male vs. female victims across cities, with 95% confidence
+intervals (CIs). ORs \> 1 suggest male homicides are more likely solved,
+while ORs \< 1 indicate the opposite. Many cities cluster around an OR
+of 1, showing no significant gender-based differences, as their CIs
+overlap 1. Cities like New York, NY, and Chicago, IL, have narrow CIs,
+reflecting precise estimates due to larger sample sizes, whereas cities
+like Albuquerque, NM, Stockton, CA, and Fresno, CA, have wide CIs,
+reflecting high uncertainty due to smaller samples or variability. While
+most cities show no significant gender bias, the variability in cities
+with extreme ORs or wide CIs, such as Albuquerque, NM, and Stockton, CA,
+warrants further investigation.
