--- a/p8105_hw6_ys3766.md
+++ b/p8105_hw6_ys3766.md
@@ -444,8 +444,8 @@ cv_results %>%
   select(rmse_1, rmse_2, rmse_stepwise) %>%
   pivot_longer(cols = everything(), names_to = "model", values_to = "rmse") %>%
   mutate(model = recode(model,
-                        "rmse_1" = "Model 1: Length + Gestational Age",
-                        "rmse_2" = "Model 2: Head Circumference + Length + Sex",
+                        "rmse_1" = "Model 1",
+                        "rmse_2" = "Model 2",
                         "rmse_stepwise" = "Stepwise Model")) %>%
   ggplot(aes(x = model, y = rmse, fill = model)) +
   geom_violin(alpha = 0.7) +
